--- a/templates/pages/category.html
+++ b/templates/pages/category.html
@@ -3,9 +3,7 @@ category:
     shop_by_price: true
     products:
         limit: {{theme_settings.categorypage_products_per_page}}
-carousel: {{theme_settings.homepage_show_carousel}}
 ---
-
 {{inject "categoryProductsPerPage" theme_settings.categorypage_products_per_page}}
 {{#partial "head"}}
     {{#if pagination.category.previous}}
@@ -18,14 +16,7 @@ carousel: {{theme_settings.homepage_show_carousel}}
 
 {{#partial "page"}}
 
-{{{region name="home_below_menu"}}}
-{{#and carousel carousel.slides.length}}
-    {{> components/carousel arrows=theme_settings.homepage_show_carousel_arrows play_pause_button=theme_settings.homepage_show_carousel_play_pause_button}}
-{{/and}}
-{{{region name="home_below_carousel"}}}
-
 {{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
-{{>pages/custom/page/product}}
 {{#if category.image}}
     {{> components/common/responsive-img
         image=category.image
@@ -34,7 +25,10 @@ carousel: {{theme_settings.homepage_show_carousel}}
         class="category-header-image"
     }}
 {{/if}}
-
+{{#unless theme_settings.hide_category_page_heading }}
+    <h1 class="page-heading">{{category.name}}</h1>
+    {{{region name="category_below_header"}}}
+{{/unless}}
 {{{category.description}}}
 <div class="page">
     {{#if category.faceted_search_enabled}}
@@ -45,13 +39,19 @@ carousel: {{theme_settings.homepage_show_carousel}}
         <aside class="page-sidebar" id="faceted-search-container">
             {{> components/category/sidebar}}
         </aside>
-
+    {{else if category.shop_by_price}}
+        {{#if theme_settings.shop_by_price_visibility}}
+             <aside class="page-sidebar" id="faceted-search-container">
+                {{> components/category/sidebar}}
+            </aside>
+        {{/if}}
     {{/if}}
 
-  
+    <div class="page-content" id="product-listing-container">
+        {{> components/category/product-listing}}
+        {{{region name="category_below_content"}}}
+    </div>
 </div>
 
 {{/partial}}
-
-
 {{> layout/base}}
